--- a/Example/SunbeamBLECentralService.xcodeproj/xcshareddata/xcschemes/SunbeamBLECentralService-Example.xcscheme
+++ b/Example/SunbeamBLECentralService.xcodeproj/xcshareddata/xcschemes/SunbeamBLECentralService-Example.xcscheme
@@ -71,6 +71,13 @@
             ReferencedContainer = "container:SunbeamBLECentralService.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "SLogOn"
+            value = "1"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
