--- a/Example/SunbeamBLECentralService/SunbeamBLECentralService-Info.plist
+++ b/Example/SunbeamBLECentralService/SunbeamBLECentralService-Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>SLogOn</key>
-	<false/>
+	<true/>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
